- Changed flags of Etherlithium Matrix Crystal to allow every member of a group to loot it.

- Added Ethereal Technology to the loot table of Zaxxis Raider for the quest Pick Your Part.
- Changed flags of Ethereal Technology to allow every member of a group to loot it.

[2021-12-29]
- Added Warsong Munitions to the loot table of Nerub'ar Skitterer for the quest Patience is a Virtue that We Don't Need.
- Changed flags of Warsong Munitions to allow every member of a group to loot it.

[2022-01-06]
- Added Digested Caracoli to the loot table of Talbuk Thorngrazer for the quest A Rare Bean.
- Changed flags of Digested Caracoli to allow every member of a group to loot it.

- Added Intact Plague Container to the loot table of North Fleet Salvager for the quest The New Plague.
- Added Intact Plague Container to the loot table of North Fleet Sailor for the quest The New Plague.
- Changed flags of Intact Plague Container to allow every member of a group to loot it.

[2022-01-07]
- Added Spotted Hippogryph Down to the loot table of Shoveltusk Forager for the quest Hasty Preparations.
- Changed flags of Spotted Hippogryph Down to allow every member of a group to loot it.

- Changed flags of Book of Runes - Chapter 1 to allow every member of a group to loot it.
- Changed flags of Book of Runes - Chapter 2 to allow every member of a group to loot it.
- Changed flags of Book of Runes - Chapter 3 to allow every member of a group to loot it.

- Changed the respawn time of Iron Rune Carving Tools.

[2022-01-09]
- Added Wyrmtail to the loot table of Searing Whelp for the quest Catch a Dragon by the Tail.
- Added Wyrmtail to the loot table of Drywallow Daggermaw for the quest Catch a Dragon by the Tail.
- Changed flags of Wyrmtail to allow every member of a group to loot it.

- Added Milly's Harvest to the loot table of Defias Thug for the quest Milly's Harvest.
- Changed flags of Milly's Harvest to allow every member of a group to loot it.